--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
+html,
+body,
+#root {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.ws {
+  height: 100%;
+  background-color: #fafafa;
+  background-size: 50px 50px;
+  display: flex;
+  background-image: linear-gradient(
+      0deg,
+      transparent 24%,
+      rgba(60, 60, 60, 0.05) 25%,
+      rgba(60, 60, 60, 0.05) 26%,
+      transparent 27%,
+      transparent 74%,
+      rgba(60, 60, 60, 0.05) 75%,
+      rgba(60, 60, 60, 0.05) 76%,
+      transparent 77%,
+      transparent
+    ),
+    linear-gradient(
+      90deg,
+      transparent 24%,
+      rgba(60, 60, 60, 0.05) 25%,
+      rgba(60, 60, 60, 0.05) 26%,
+      transparent 27%,
+      transparent 74%,
+      rgba(60, 60, 60, 0.05) 75%,
+      rgba(60, 60, 60, 0.05) 76%,
+      transparent 77%,
+      transparent
+    );
+}
+
+.node {
+  width: 100px;
+  height: 100px;
 }
