--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,16 @@ body,
     );
 }
 
+.toolbar {
+  width: 100%;
+  height: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #fafafa;
+  border-bottom: 1px solid #ddd;
+}
+
 .node {
   position: absolute;
   width: 100px;
