--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body,
   padding: 0;
   width: 100%;
   height: 100%;
+  font-family: Roboto;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .ws {
@@ -53,7 +58,7 @@ body,
 
 .node {
   position: absolute;
-  width: 100px;
+  width: 200px;
   height: 100px;
   /* background-color: gray; */
   background-color: #fff;
@@ -77,4 +82,45 @@ body,
   width: 10px;
   height: 10px;
   background-color: gray;
+}
+
+svg:hover > path {
+  cursor: pointer;
+  stroke-width: 6;
+}
+
+.node-content {
+  width: 100%;
+  height: 100%;
+  padding-left: 8px;
+  padding-top: 10px;
+}
+
+.node-title {
+  margin: 0;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.334;
+  letter-spacing: 0em;
+}
+
+.node-version {
+  margin: 0;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5;
+  letter-spacing: 0.00938em;
+  color: rgba(0, 0, 0, 0.6);
+  margin-bottom: 12px;
+}
+
+.node-type {
+  margin: 0;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 300;
+  font-size: 0.875rem;
+  line-height: 1.43;
+  letter-spacing: 0.01071em;
 }
